Tic tac version #2

--- a/style.css
+++ b/style.css
@@ -62,5 +62,5 @@ body, .main {
 #minute,
 #second {
     transform-origin: 300px 300px;
-    transition: transform .5s ease-in-out; 
+    /*transition: transform .5s ease-in-out; NOT CAUSE LOOK RARE WHEN YOU CAME BACK TO THE WINDOWS BROWSER */
 }
