--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html {
-    background: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.3)), url(img/light.jpg);
+    background: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.3)), url(img/light.jpg) center no-repeat;
     background-size:cover;
     }
 
